# algebra

./: algebra.cabal  stack.yaml
app/: Main.hs
src/: Algebra.hs
src/Algebra/: Sexp.hs  Types.hs
