name:                algebra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/algebra#readme
license:             BSD3
license-file:        LICENSE
author:              Tin Pavlinic
maintainer:          tin.pavlinic@gmail.com
copyright:           2017 Tin Pavlinic
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Algebra, Algebra.Types, Algebra.Sexp
  build-depends:       base, text, containers, s-cargot
  default-language:    Haskell2010

executable algebra
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , algebra
                     , containers
  default-language:    Haskell2010
